--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,9 +26,9 @@
 @import 'gauge';
 @import 'hires';
 @import 'notifications';
-@import 'charts';
-@import 'tables';
+@import 'chart';
+@import 'table';
+@import 'stat';
 @import 'guilds-tab';
-@import 'text';
-@import 'stats';
+@import 'dropdown';
 
