--- a/app/views/dashboard/overview/hires/_most-recent-hires-table.html.slim
+++ b/app/views/dashboard/overview/hires/_most-recent-hires-table.html.slim
@@ -1,4 +1,4 @@
-i class="material-icons charts_info-tooltip" data-toggle="tooltip" data-placement="right" title="Most recent hires." help_outline
+i class="material-icons chart_info-tooltip" data-toggle="tooltip" data-placement="right" title="Most recent hires." help_outline
 div class="table_table-header mb-1"
     div class="container-fluid"
         div class="row"
@@ -28,7 +28,7 @@ div id="recent-hires_rows"
                     div class="col-lg-2 d-flex align-items-center table_data--lg-display"
                         p class="table_data-text table_data--lg-display" #{hire['hire_date']}
 
-div class="chart-status_bubbles" id="chart-status_recent-hires"
-    div class="chart-status_bubble chart-status_bubble-1"
-    div class="chart-status_bubble chart-status_bubble-2"
-    div class="chart-status_bubble chart-status_bubble-3"
+div class="chart_status-bubbles" id="chart-status_recent-hires"
+    div class="chart_status-bubble chart_status-bubble-1"
+    div class="chart_status-bubble chart_status-bubble-2"
+    div class="chart_status-bubble chart_status-bubble-3"
