--- a/app/assets/stylesheets/_gauge.scss
+++ b/app/assets/stylesheets/_gauge.scss
@@ -1,22 +1,22 @@
-.gauge-container {
+.gauge_container {
   width: 100%;
   position: relative;
   overflow: hidden;
 }
 
-.gauge-outer-under {
+.gauge_outer-under {
   z-index: 1;
   background-color: rgba(216, 216, 216, 0.541);
   position: absolute;
 }
 
-.gauge-inner {
+.gauge_inner {
   z-index: 3;
   position: absolute;
   background-color: white;
 }
 
-.gauge-outer-over {
+.gauge_outer-over {
   z-index: 2;
   position: absolute;
   background-color: #3366cc;
@@ -24,15 +24,26 @@
   transition: transform 1.3s ease-in-out;
 }
 
-.gauge-data {
+.gauge_data {
   z-index: 4;
   color: black;
   font-size: 1.5em;
   line-height: 25px;
   position: absolute;
   text-align: center;
+  font-weight: 600;
 }
 
+
+.gauge_sub-data-description{ 
+    font-size: 1rem; 
+    font-weight: 300;
+}
+
+.gauge_sub-data-number{ 
+    font-size: 1.1rem;
+    font-weight: 600; 
+}
 
 
 
