--- a/app/views/dashboard/overview/hires/_hires-by-years-control.html.slim
+++ b/app/views/dashboard/overview/hires/_hires-by-years-control.html.slim
@@ -2,11 +2,11 @@ form id="years-hires_form"
     div class="container-fluid mb-3 px-0"
         div class="row"
             div class="col-12 col-sm-2"
-                i class="material-icons charts_info-tooltip" data-toggle="tooltip" data-placement="right" title="Hires per year." help_outline
+                i class="material-icons chart_info-tooltip" data-toggle="tooltip" data-placement="right" title="Hires per year." help_outline
             div class="col-12 col-sm-10 d-flex justify-content-end"
                 div class="dropdown ml-2"
                     button class="btn btn-outline-secondary dropdown-toggle button--select" data-toggle="dropdown" Years
-                    div class="dropdown-menu dropdown-menu-right text--sans-serif-small"
+                    div class="dropdown-menu dropdown-menu-right dropdown_menu-container"
                         - get_years.each do |year| 
                             div class="dropdown-item"
                                 div class="custom-control custom-checkbox"
