--- a/app/views/dashboard/overview/hires/_hires-by-years-months-graph.html.slim
+++ b/app/views/dashboard/overview/hires/_hires-by-years-months-graph.html.slim
@@ -1,6 +1,6 @@
 div id="years-months-hires_container" style="height: 20rem"
     = render_hires_years_months(@graph_type, @years_v1)
-div class="chart-status_bubbles" id="chart-status_hires-years-months"
-    div class="chart-status_bubble chart-status_bubble-1"
-    div class="chart-status_bubble chart-status_bubble-2"
-    div class="chart-status_bubble chart-status_bubble-3"
+div class="chart_status-bubbles" id="chart-status_hires-years-months"
+    div class="chart_status-bubble chart_status-bubble-1"
+    div class="chart_status-bubble chart_status-bubble-2"
+    div class="chart_status-bubble chart_status-bubble-3"
