--- a/app/views/dashboard/overview/offers/_offer-acceptance-ratios-graph.html.slim
+++ b/app/views/dashboard/overview/offers/_offer-acceptance-ratios-graph.html.slim
@@ -1,6 +1,6 @@
 div
     = render_offer_acceptance_ratios(@ratios_years)
-div class="chart-status_bubbles" id="chart-status_offer-ratios"
-    div class="chart-status_bubble chart-status_bubble-1"
-    div class="chart-status_bubble chart-status_bubble-2"
-    div class="chart-status_bubble chart-status_bubble-3"
+div class="chart_status-bubbles" id="chart-status_offer-ratios"
+    div class="chart_status-bubble chart_status-bubble-1"
+    div class="chart_status-bubble chart_status-bubble-2"
+    div class="chart_status-bubble chart_status-bubble-3"
