--- a/app/views/dashboard/overview/offers/_year-offer-acceptance-ratio-year.html.slim
+++ b/app/views/dashboard/overview/offers/_year-offer-acceptance-ratio-year.html.slim
@@ -1,10 +1,10 @@
 p {
-class="mt-4 charts_date" 
+class="mt-4 chart_date" 
 id="offer-acceptance-ratio_year" 
 data-date="#{offer_acceptance_ratio_data_for_year(current: true)[:date]}"
 } #{offer_acceptance_ratio_data_for_year(current: true)[:date]}
 
-div class="chart-status_bubbles" id="chart-status_offer-ratio-year"
-    div class="chart-status_bubble chart-status_bubble-1"
-    div class="chart-status_bubble chart-status_bubble-2"
-    div class="chart-status_bubble chart-status_bubble-3"
+div class="chart_status-bubbles" id="chart-status_offer-ratio-year"
+    div class="chart_status-bubble chart_status-bubble-1"
+    div class="chart_status-bubble chart_status-bubble-2"
+    div class="chart_status-bubble chart_status-bubble-3"
