fix ui update bug in stats component

--- a/app/assets/stylesheets/_table.scss
+++ b/app/assets/stylesheets/_table.scss
@@ -11,18 +11,21 @@
 .table_data-container{
     width: 100%; 
     padding: .5rem;
+    color: black;
+    background-color: #f9f9f9;
+}
+
+.table_data-container--white{
     background-color: white;
-    // background-color: #616161;
 }
 
 .table_data-container:nth-child(odd){
-    background-color: #f9f9f9;
+    background-color: white;
 }
 
 .table_data-text{
     margin: 0;
     font-weight: 400;
-    color: black;
     font-size: .95rem;
 }
 
