--- a/app/views/dashboard/overview/hires/_hires-stats.html.slim
+++ b/app/views/dashboard/overview/hires/_hires-stats.html.slim
@@ -24,7 +24,7 @@ div class="stat_container mb-2"
                 i class="material-icons stat_stat-icon" equalizer
 p {
 class="chart_date mt-4" 
-id="hires-stat_date" 
+id="hires-stats_date" 
 data-date="#{hires_statistics(current: true)[:date]}"
 } #{hires_statistics(current: true)[:date]}
 
