refactor get openings filled by department method

--- a/app/views/dashboard/guilds/shared/_days-to-hire-table.html.slim
+++ b/app/views/dashboard/guilds/shared/_days-to-hire-table.html.slim
@@ -8,6 +8,7 @@ div class="days-to-hire-table_container"
         tbody 
             - openings_filled_by_department(@current_guild).each do |opening|
                 tr
-                    td #{opening[:job]}
+                    td 
+                        a href="https://plated.greenhouse.io/sdash/391100" target="_blank"  #{opening[:job]}
                     td #{opening[:office]}
                     td #{opening[:days_to_hire]}
