--- a/app/views/dashboard/guilds/_guilds-buttons-list.html.slim
+++ b/app/views/dashboard/guilds/_guilds-buttons-list.html.slim
@@ -1,35 +1,35 @@
-div class="guilds-tab_guilds-list"
+div class="mb-2"
     div class="container-fluid px-0"
         div class="row"
             div class="col-12 col-sm-6 col-md-12"
-                a href="/dashboard/guilds/culinary" class="guilds-list-item" 
-                    <i class="material-icons guild-list-item_icon">restaurant</i>
+                a href="/dashboard/guilds/culinary" class="button--type-1" 
+                    i class="material-icons button_icon" restaurant
                     p Culinary
-                a href="/dashboard/guilds/customer-experience" class="guilds-list-item" 
-                    <i class="material-icons guild-list-item_icon">face</i>
+                a href="/dashboard/guilds/customer-experience" class="button--type-1" 
+                    i class="material-icons button_icon" face
                     p CX
-                a href="/dashboard/guilds/data-science" class="guilds-list-item"
-                    <i class="material-icons guild-list-item_icon">timeline</i>
+                a href="/dashboard/guilds/data-science" class="button--type-1"
+                    i class="material-icons button_icon" timeline
                     p Data Science
-                a href="/dashboard/guilds/finance" class="guilds-list-item" 
-                    <i class="material-icons guild-list-item_icon">attach_money</i>
+                a href="/dashboard/guilds/finance" class="button--type-1" 
+                    i class="material-icons button_icon" attach_money
                     p Finance
-                a href="/dashboard/guilds/legal" class="guilds-list-item" 
-                    <i class="material-icons guild-list-item_icon">gavel</i>
+                a href="/dashboard/guilds/legal" class="button--type-1" 
+                    i class="material-icons button_icon" gavel
                     p Legal
             div class="col-12 col-sm-6 col-md-12"
-                a href="/dashboard/guilds/marketing" class="guilds-list-item" 
-                    <i class="material-icons guild-list-item_icon">data_usage</i>
+                a href="/dashboard/guilds/marketing" class="button--type-1" 
+                    i class="material-icons button_icon" data_usage
                     p Marketing
-                a href="/dashboard/guilds/operations" class="guilds-list-item" 
-                    <i class="material-icons guild-list-item_icon">layers</i>
+                a href="/dashboard/guilds/operations" class="button--type-1" 
+                    i class="material-icons button_icon" layers
                     p Operations
-                a href="/dashboard/guilds/people" class="guilds-list-item" 
-                    <i class="material-icons guild-list-item_icon">people</i>
+                a href="/dashboard/guilds/people" class="button--type-1" 
+                    i class="material-icons button_icon" people
                     p People
-                a href="/dashboard/guilds/product" class="guilds-list-item" 
-                    <i class="material-icons guild-list-item_icon">web</i>
+                a href="/dashboard/guilds/product" class="button--type-1" 
+                    i class="material-icons button_icon" web
                     p Product
-                a href="/dashboard/guilds/technology" class="guilds-list-item" 
-                    <i class="material-icons guild-list-item_icon">code</i>
+                a href="/dashboard/guilds/technology" class="button--type-1" 
+                    i class="material-icons button_icon" code
                     p Technology
