--- a/app/assets/stylesheets/_dashboard.scss
+++ b/app/assets/stylesheets/_dashboard.scss
@@ -36,6 +36,18 @@
     padding-bottom: 0 !important; 
 }
 
+.dashboard_focal-content-container--left{
+    padding-right: .50rem !important;
+    padding-bottom: 0!important;
+}
+
+.dashboard_focal-content-container{
+    background-color: white; 
+    padding: 1.5rem 2rem;
+    height: 100%;
+    border-top: .4rem solid map-get($plated-secondary-palette, "dinosaur-kale");
+}
+
 
 // ---------------
 
@@ -47,25 +59,6 @@
     top: 0;
     left: 0; 
     width: 100%;
-}
-
-
-.focal-left{
-    margin-right: .50rem !important;
-    margin-bottom: 0!important;
-}
-
-.dashboard_focal-content-container{
-    background-color: white; 
-    padding: 1.5rem 2rem;
-    height: 100%;
-    border-top: .4rem solid map-get($plated-secondary-palette, "dinosaur-kale");
-}
-
-.dashboard_focal-content-header{
-    margin-bottom: 2rem;
-    font-family: $font-family-serif;
-    font-weight: 600 !important;
 }
 
 #dashboard_mobile-menu-title{
@@ -147,20 +140,14 @@
     }
 }
 
-@include media-breakpoint-down(xs){
-    .offer-acceptance-ratio-info--left{
-        border-right: 0 !important; 
-    }
-}
-
 @include media-breakpoint-down(sm){
     .dashboard_content-container--small-left{
         padding-bottom: .25rem !important;
         padding-right: 0 !important;
     }
 
-    .focal-left{
-        margin-right:  0 !important;
-        margin-bottom: .50rem !important;
+    .dashboard_focal-content-container--left{
+        padding-right:  0 !important;
+        padding-bottom: 1.5rem !important;
     }
 }
