--- a/app/views/dashboard/guilds/_hires-by-guild-date.html.slim
+++ b/app/views/dashboard/guilds/_hires-by-guild-date.html.slim
@@ -1,10 +1,10 @@
 p {
-class="mt-4 charts_date" 
+class="mt-4 chart_date" 
 id="hires-by-guild_year" 
 data-date="#{Time.now().year}"
 } #{Time.now().year}
 
-div class="chart-status_bubbles" id="chart-status_hires-by-guild"
-    div class="chart-status_bubble chart-status_bubble-1"
-    div class="chart-status_bubble chart-status_bubble-2"
-    div class="chart-status_bubble chart-status_bubble-3"
+div class="chart_status-bubbles" id="chart-status_hires-by-guild"
+    div class="chart_status-bubble chart_status-bubble-1"
+    div class="chart_status-bubble chart_status-bubble-2"
+    div class="chart_status-bubble chart_status-bubble-3"
