--- a/app/views/dashboard/guilds/index.html.slim
+++ b/app/views/dashboard/guilds/index.html.slim
@@ -3,8 +3,8 @@ div id="dashboard_guilds-tab"
         h3 class="dashboard_content-header" Overview
     div class="container-fluid px-0"
         div class="row no-gutters"
-            div class="col-12 col-md-4"
-                    div class="dashboard_focal-content-container focal-left"
+            div class="col-12 col-md-4 dashboard_focal-content-container--left"
+                    div class="dashboard_focal-content-container"
                         h4 class="dashboard_content-header mb-5" Guilds
                         = render 'dashboard/guilds/guilds-buttons-list'
             div class="col-12 col-md-8"
