--- a/app/views/dashboard/overview/hires/_most-recent-hires-table.html.slim
+++ b/app/views/dashboard/overview/hires/_most-recent-hires-table.html.slim
@@ -1,4 +1,7 @@
-i class="material-icons chart_info-tooltip" data-toggle="tooltip" data-placement="right" title="Most recent hires." help_outline
+div class="container-fluid mb-3 px-0"
+    div class="row"
+        div class="col-12 col-sm-2"
+            i class="material-icons chart_info-tooltip" data-toggle="tooltip" data-placement="right" title="Most recent hires." help_outline
 div class="table_table-header mb-1"
     div class="container-fluid"
         div class="row"
