--- a/app/assets/stylesheets/_table.scss
+++ b/app/assets/stylesheets/_table.scss
@@ -31,6 +31,38 @@
 
 .table_data-icon{ font-weight: 400; }
 
+
+// ---------- DATATABLES CLASSES ---------
+.days-to-hire-table_top{
+    width: 100%;
+    height: 2rem;
+    margin-bottom: 1rem;
+}
+
+.days-to-hire-table_bottom{
+    width: 100%;
+    height: 1.5rem;
+    margin-top: 1rem;
+}
+
+table#days-to-hire-table th{
+    color: white;
+    background-color: #00BEAC;
+    border: 0;
+}
+
+#days-to-hire-table_length{ margin-bottom: 1rem; }
+
+#days-to-hire-table_filter{ margin-bottom: 1rem; }
+
+#days-to-hire-table_paginate{ margin-top: 1rem; }
+
+#days-to-hire-table_info{ margin-top: 1rem; }
+
+#days-to-hire-table{ border-bottom: .1rem solid #d8d8d8; }
+
+
+// -------- MEDIA QUERIES --------------
 @include media-breakpoint-down(lg){
     .table_column-name--lg-display, .table_data--lg-display{
         display: none;
