--- a/app/views/dashboard/guilds/shared/_guild-jobs-stats-tooltip.html.slim
+++ b/app/views/dashboard/guilds/shared/_guild-jobs-stats-tooltip.html.slim
@@ -1,4 +1,4 @@
 div class="container-fluid mb-3 px-0"
     div class="row"
         div class="col-12 col-sm-2"
-            <i class="material-icons charts_info-tooltip" data-toggle="tooltip" data-placement="right" title="Live jobs and openings.">help_outline</i>
+            i class="material-icons chart_info-tooltip" data-toggle="tooltip" data-placement="right" title="Live jobs and openings." help_outline
