--- a/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-gauge.html.slim
+++ b/app/views/dashboard/overview/offers/_month-year-offer-acceptance-ratio-gauge.html.slim
@@ -2,4 +2,4 @@ div class="gauge_container d-flex justify-content-center mt-5"
     div class="gauge_outer-under gauge_outer"
     div class="gauge_inner"
     div class="gauge_outer-over gauge_outer" id="gauge-outer-over_year-month" data-ratio="#{offer_acceptance_ratio_data_for_month_in_year(current: true)[:ratio]}"
-    div class="gauge_data" id="gauge-data_year-month" #{offer_acceptance_ratio_data_for_month_in_year(current: true)[:ratio]}
+    h4 class="gauge_data" id="gauge-data_year-month" #{offer_acceptance_ratio_data_for_month_in_year(current: true)[:ratio]}
