--- a/app/views/dashboard/guilds/shared/_percent-of-jobs-bubbles.html.slim
+++ b/app/views/dashboard/guilds/shared/_percent-of-jobs-bubbles.html.slim
@@ -1,4 +1,4 @@
-div class="chart-status_bubbles" id="chart-status_percent-of-jobs"
-    div class="chart-status_bubble chart-status_bubble-1"
-    div class="chart-status_bubble chart-status_bubble-2"
-    div class="chart-status_bubble chart-status_bubble-3"
+div class="chart_status-bubbles" id="chart-status_percent-of-jobs"
+    div class="chart_status-bubble chart_status-bubble-1"
+    div class="chart_status-bubble chart_status-bubble-2"
+    div class="chart_status-bubble chart_status-bubble-3"
