refactor hires by source graph

--- a/app/views/dashboard/guilds/shared/_hires-per-year-tooltip.html.slim
+++ b/app/views/dashboard/guilds/shared/_hires-per-year-tooltip.html.slim
@@ -1,4 +1,4 @@
 div class="container-fluid mb-3 px-0"
     div class="row"
         div class="col-12"
-            <i class="material-icons charts_info-tooltip" data-toggle="tooltip" data-placement="right" title="Hires per year.">help_outline</i>
+            <i class="material-icons chart_info-tooltip" data-toggle="tooltip" data-placement="right" title="Hires per year.">help_outline</i>
