--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@
 @import 'bootstrap';
 @import 'button';
 @import 'forms';
+@import 'menu';
 @import 'dashboard';
 @import 'sidebar';
 @import 'gauge';
@@ -31,4 +32,5 @@
 @import 'stat';
 @import 'guilds-tab';
 @import 'dropdown';
+
 
