--- a/app/views/dashboard/guilds/shared/_days-to-hire-table.html.slim
+++ b/app/views/dashboard/guilds/shared/_days-to-hire-table.html.slim
@@ -7,7 +7,6 @@ table id="days-to-hire-table" class="display"
     tbody 
         - openings_filled_by_department(@current_guild).each do |opening|
             tr
-                td 
-                    a href="https://plated.greenhouse.io/sdash/391100" target="_blank"  #{opening[:job]}
+                td #{opening[:job]}
                 td #{opening[:office]}
                 td #{opening[:days_to_hire]}
