--- a/app/assets/stylesheets/_dashboard.scss
+++ b/app/assets/stylesheets/_dashboard.scss
@@ -116,82 +116,7 @@
 .dashboard_update-page-control_update-button-container{ margin-top: .15rem !important; }
 
 
-// ---------------
-
-.dashboard_mobile-menu-container{
-    display: none;
-    padding: 1.5rem 2rem;
-    background-color: map-get($plated-primary-palette, "red" );
-    position: absolute;
-    top: 0;
-    left: 0; 
-    width: 100%;
-}
-
-#dashboard_mobile-menu-title{
-    font-family: $font-family-serif;
-    font-weight: 700;
-    color: white;
-    margin: 0;
-}
-
-#dashboard_toggle-mobile-menu-button{
-    width: fit-content;
-    padding: 0;
-    margin-left: 1rem;
-    background-color: transparent;
-    border: none;
-    color: white;
-    transition: all 0.3s;
-}
-
-#dashboard_toggle-mobile-menu-button:focus{
-    outline: 0;
-}
-
-#dashboard_toggle-mobile-menu-button:hover{ 
-    cursor: pointer;
-}
-
-.collapsed-menu_nav-links{
-    list-style-type: none;
-    color: white;
-    display: flex;
-    margin: 1.5rem 0 .2rem 0;
-    padding: 0;
-    font-size: .95rem;
-}
-
-.collapsed-menu_nav-links a{
-    color: white;
-}
-
-.collapsed-menu_nav-links .current{
-    border-bottom: .2rem solid white;
-}
-
-.collapsed-menu_nav-link:nth-of-type(2){
-    margin: 0 1.2rem;
-}
-
-.collapsed-menu_nav-link{
-    text-transform: uppercase;
-    letter-spacing: .2rem;
-    width: fit-content;
-    box-sizing: border-box;
-}
-
-.collapsed-menu_signout{
-    background-color: transparent;
-    text-transform: uppercase;
-    letter-spacing: .2rem;
-    font-weight: 425;
-    color: white; 
-    border: 0;
-    width: fit-content;
-}
-
-// hide sidebar, expand content area, and show menu toggle button
+// ----- MEDIA QUERIES -------------
 @include media-breakpoint-down(md){
     #sidebar{
         margin-left: -250px;
@@ -202,7 +127,7 @@
         padding: 7.5rem 2rem 2rem 2rem;
     } 
     
-    .dashboard_mobile-menu-container{
+    .menu_mobile-menu-container{
         display: block;
     }
 }
