style datatables components

--- a/app/views/dashboard/guilds/shared/_days-to-hire-table.html.slim
+++ b/app/views/dashboard/guilds/shared/_days-to-hire-table.html.slim
@@ -1,4 +1,4 @@
-table id="days-to-hire-table" class="display"
+table id="days-to-hire-table" class="stripe order-column"
     thead
         tr
             th Job
