--- a/app/assets/stylesheets/_table.scss
+++ b/app/assets/stylesheets/_table.scss
@@ -51,15 +51,33 @@ table#days-to-hire-table th{
     border: 0;
 }
 
-#days-to-hire-table_length{ margin-bottom: 1rem; }
+#days-to-hire-table_length{ 
+    margin-bottom: 1rem; 
+    display: flex;
+    justify-content: center;
+}
+
+#days-to-hire-table_length label{
+    display: flex;
+    align-items: center;
+}
+
+.days-to-hire-table_custom-select{
+    margin: 0 .5rem;
+}
 
 #days-to-hire-table_filter{ margin-bottom: 1rem; }
+
+#days-to-hire-table_filter label{
+    display: flex;
+    align-items: center;
+}
 
 #days-to-hire-table_paginate{ margin-top: 1rem; }
 
 #days-to-hire-table_info{ margin-top: 1rem; }
 
-#days-to-hire-table{ border-bottom: .1rem solid #d8d8d8; }
+#days-to-hire-table{ border-bottom: .1rem solid white; }
 
 
 // -------- MEDIA QUERIES --------------
