--- a/app/assets/stylesheets/_button.scss
+++ b/app/assets/stylesheets/_button.scss
@@ -21,8 +21,8 @@
     background-color: white;
     padding: .8rem;
     align-items: center;
-    border: .095rem solid #b9bec3;
-    color: #6c757d;
+    border: .095rem solid #cccccc;
+    color: #9ea2a5;
     margin-bottom: .6rem;
     transition: border 150ms ease-in,
                 color 150ms ease-in ;
