--- a/app/views/dashboard/overview/hires/_most-recent-hires-table.html.slim
+++ b/app/views/dashboard/overview/hires/_most-recent-hires-table.html.slim
@@ -17,7 +17,7 @@ div class="table_table-header mb-1"
 
 div id="recent-hires_rows"
     - recent_hires.each do |hire|
-        div class="table_data-container mb-1" data-candidate-id="#{hire['candidate_id']}"
+        div class="table_data-container" data-candidate-id="#{hire['candidate_id']}"
             div class="container-fluid"
                 div class="row"
                     div class="col-md-1 col-lg-1 d-flex align-items-center justify-content-center table_data--sm-display"
