edit header and page fonts

--- a/app/assets/stylesheets/_button.scss
+++ b/app/assets/stylesheets/_button.scss
@@ -52,6 +52,6 @@
     font-weight: 580 !important;
 }
 
-.button_icon--back:hover{
-    color: rgb(112, 112, 112);
+.button--back:hover{
+    color: rgb(112, 112, 112) !important;
 }
