--- a/app/assets/stylesheets/_chart.scss
+++ b/app/assets/stylesheets/_chart.scss
@@ -4,7 +4,8 @@
     padding: .5rem;
     text-align: center;
     margin-bottom: 0;
-    border-top: .3rem solid #e4e4e4;
+    border-top: .29rem solid #e4e4e4;
+    border-bottom: .1rem solid #e4e4e4;
     font-weight: 600 !important;
 }
 
