--- a/app/assets/stylesheets/_dashboard.scss
+++ b/app/assets/stylesheets/_dashboard.scss
@@ -61,8 +61,8 @@
 }
 
 .dashboard_page-header-type1{
-    color: #4f5152 !important;
-    // font-family: $font-family-serif;
+    // color: #4f5152 !important;
+    color: black;
     font-family: Hoefler Text,Baskerville Old Face,Garamond,Times New Roman,serif; 
     font-weight: 600 !important;
     letter-spacing: .05rem;
