delete some html files

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,17 +21,15 @@
 @import 'custom';
 @import 'bootstrap';
 @import 'button';
-@import 'forms';
-@import 'menu';
-@import 'dashboard';
-@import 'sidebar';
-@import 'gauge';
-@import 'hires';
-@import 'notifications';
 @import 'chart';
-@import 'table';
-@import 'stat';
-@import 'guilds-tab';
+@import 'dashboard';
 @import 'dropdown';
+@import 'form';
+@import 'gauge';
+@import 'menu';
+@import 'notification';
+@import 'sidebar';
+@import 'stat';
+@import 'table';
 
 
