--- a/app/assets/stylesheets/_form.scss
+++ b/app/assets/stylesheets/_form.scss
@@ -1,16 +1,16 @@
-.sign-in-form-container{
+.form_sign-in-form-container{
     background-color: map-get($map: $plated-primary-palette, $key: "red");
     height: 100vh;
 }
 
-.sign-in-form{
+.form_sign-in-form{
     margin-top: 2.8rem;
     padding: 4rem;
     color: map-get($map: $plated-primary-palette, $key: "charcoal");
     background-color: map-get($map: $plated-primary-palette, $key: "white");
 }
 
-.sign-in-form_header{
+.form_sign-in-form_header{
     font-family: $font-family-serif;
     color: map-get($map: $plated-primary-palette, $key: "red");
     margin-bottom: 2rem;
@@ -18,6 +18,6 @@
     font-weight: 700;
 }
 
-.sign-in-form_alert{
+.form_sign-in-form_alert{
     margin-top: 1rem;
 }
