--- a/app/assets/stylesheets/_form.scss
+++ b/app/assets/stylesheets/_form.scss
@@ -1,11 +1,15 @@
-.form_sign-in-form-container{
+#sign-in-page{
     background-color: map-get($map: $plated-primary-palette, $key: "red");
-    height: 100vh;
+    min-height: 100vh;
+}
+
+.form_sign-in-form-container{
+    min-height: 100vh;
 }
 
 .form_sign-in-form{
-    margin-top: 2.8rem;
-    padding: 4rem;
+    margin: 2.8rem 0;
+    padding: 5rem 4rem;
     color: map-get($map: $plated-primary-palette, $key: "charcoal");
     background-color: map-get($map: $plated-primary-palette, $key: "white");
 }
