--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,7 +6,7 @@ html
     = csrf_meta_tag 
     = csp_meta_tag
     = stylesheet_link_tag 'application', media: 'all'
-    = javascript_include_tag 'login'
+    = javascript_include_tag 'application'
   body
     = yield
 
