--- a/app/views/dashboard/overview/hires/_most-recent-hires-table.html.slim
+++ b/app/views/dashboard/overview/hires/_most-recent-hires-table.html.slim
@@ -5,31 +5,32 @@ div class="container-fluid mb-3 px-0"
 div class="table_table-header mb-1"
     div class="container-fluid"
         div class="row"
-            div class="col-md-1 col-lg-1 table_column-name--sm-display"
-            div class="col-6 col-md-4 col-lg-3"
+            div class="col-6 col-md-4 col-lg-4 col-xl-3"
                 p class="table_column-name" name
-            div class="col-6 col-md-4 col-lg-3"
+            div class="col-6 col-md-4 col-lg-4 col-xl-3"
                 p class="table_column-name" job
-            div class="col-md-3 col-lg-3 table_column-name--sm-display"
+            div class="col-md-4 col-lg-2 col-xl-2 table_column-name--sm-display"
                 p class="table_column-name table_column-name--sm-display" guild
-            div class="col-lg-2 table_column-name--lg-display"
-                p class="table_column-name table_column-name--lg-display" hire date
+            div class="col-lg-2 col-xl-2 table_column-name--md-display"
+                p class="table_column-name table_column-name--md-display" hire date
+            div class="col-xl-2 table_column-name--lg-display"
+                p class="table_column-name table_column-name--lg-display" start date
 
 div id="recent-hires_rows"
     - recent_hires.each do |hire|
         div class="table_data-container" data-candidate-id="#{hire['candidate_id']}"
             div class="container-fluid"
                 div class="row"
-                    div class="col-md-1 col-lg-1 d-flex align-items-center justify-content-center table_data--sm-display"
-                        i class="material-icons table_data-icon table_data--sm-display" perm_identity
-                    div class="col-6 col-md-4 col-lg-3 d-flex align-items-center"
+                    div class="col-6 col-md-4 col-lg-4 col-xl-3 d-flex align-items-center"
                         p class="table_data-text" #{hire['hire_name']}
-                    div class="col-6 col-md-4 col-lg-3 d-flex align-items-center"
+                    div class="col-6 col-md-4 col-lg-4 col-xl-3 d-flex align-items-center"
                         p class="table_data-text" #{hire['job']}
-                    div class="col-md-3 col-lg-3 d-flex align-items-center table_data--sm-display"
+                    div class="col-md-4 col-lg-2 col-xl-2 d-flex align-items-center table_data--sm-display"
                         p class="table_data-text table_data--sm-display" #{hire['guild']}
-                    div class="col-lg-2 d-flex align-items-center table_data--lg-display"
-                        p class="table_data-text table_data--lg-display" #{hire['hire_date']}
+                    div class="col-lg-2 col-xl-2 d-flex align-items-center table_data--md-display"
+                        p class="table_data-text table_data--md-display" #{hire['hire_date']}
+                    div class="col-xl-2 d-flex align-items-center table_data--lg-display"
+                        p class="table_data-text table_data--lg-display" #{hire['start_date']}
 
 div class="chart_status-bubbles" id="chart-status_recent-hires"
     div class="chart_status-bubble chart_status-bubble-1"
