--- a/app/assets/stylesheets/_gauge.scss
+++ b/app/assets/stylesheets/_gauge.scss
@@ -8,6 +8,7 @@
   z-index: 1;
   background-color: rgba(216, 216, 216, 0.541);
   position: absolute;
+  box-shadow: 0rem 0.2rem 11px #cecece inset;
 }
 
 .gauge_inner {
