--- a/app/assets/stylesheets/_button.scss
+++ b/app/assets/stylesheets/_button.scss
@@ -13,7 +13,7 @@
 .button_icon{ 
     margin-right: 1.2rem; 
     font-size: 1.2rem;
-    color: map-get($plated-primary-palette, 'charcoal');
+    // color: map-get($plated-primary-palette, 'charcoal');
 }
 
 .button--type-1{
@@ -21,7 +21,8 @@
     background-color: white;
     padding: .8rem;
     align-items: center;
-    border: .094rem solid #c5c5c5;
+    border: .08rem solid #cacaca;
+    font-weight: 450;
     color: map-get($plated-primary-palette, 'charcoal');
     margin-bottom: .6rem;
     transition: border 150ms ease-in,
@@ -29,9 +30,13 @@
 }
 
 .button--type-1:hover{
-    border: .094rem solid map-get($plated-primary-palette, 'charcoal');
-    cursor: pointer;
-    color: map-get($plated-primary-palette, 'charcoal');
+    // border: .094rem solid map-get($plated-primary-palette, 'charcoal');
+    // cursor: pointer;
+    // color: map-get($plated-primary-palette, 'charcoal');
+    // background-color: #6b757c;
+    background-color: map-get($plated-primary-palette, 'charcoal');
+    border: .08rem solid map-get($plated-primary-palette, 'charcoal');
+    color: white !important;
 }
 
 .button--type-1 p{ margin: 0; }
