edit guild button

--- a/app/assets/stylesheets/_button.scss
+++ b/app/assets/stylesheets/_button.scss
@@ -21,7 +21,7 @@
     background-color: white;
     padding: .8rem;
     align-items: center;
-    border: .08rem solid #cacaca;
+    border: .08rem solid #888888;
     font-weight: 450;
     color: map-get($plated-primary-palette, 'charcoal');
     margin-bottom: .6rem;
