--- a/app/views/dashboard/guilds/shared/_days-to-hire-table.html.slim
+++ b/app/views/dashboard/guilds/shared/_days-to-hire-table.html.slim
@@ -4,8 +4,8 @@ table id="days-to-hire-table" class="stripe order-column"
             th Job
             th Office
             th Candidate hired
-            th class="chart_info-tooltip" data-toggle="tooltip" data-placement="bottom" title="offer accepted date - opening open date" Days to hire 
-            th class="chart_info-tooltip" data-toggle="tooltip" data-placement="bottom" title="offer created date - candidate apply date" Days to offer 
+            th class="chart_info-tooltip" data-toggle="tooltip" data-placement="bottom" title="candidate apply date -> offer created date" Days to offer 
+            th class="chart_info-tooltip" data-toggle="tooltip" data-placement="bottom" title="opening open date -> offer accepted date" Days to hire 
             th Opening close date
     tbody 
         - openings_filled_by_department(@current_guild).each do |opening|
@@ -13,7 +13,7 @@ table id="days-to-hire-table" class="stripe order-column"
                 td #{opening[:job]}
                 td #{opening[:office]}
                 td #{opening[:candidate_hired]}
-                td #{opening[:days_to_hire]}
                 td #{opening[:days_to_offer]}
+                td #{opening[:days_to_hire]}
                 td #{opening[:closed_at]}
 
